output_simcompile.log
Converting images
Compiling gui/src/screen1_screen/Screen1Presenter.cpp
Compiling gui/src/screen1_screen/Screen1View.cpp
Compiling generated/gui_generated/src/screen1_screen/Screen1ViewBase.cpp
Compiling generated/gui_generated/src/common/FrontendApplicationBase.cpp
Compiling simulator/main.cpp
In file included from gui/src/screen1_screen/Screen1Presenter.cpp:1:0:
gui/include/gui/screen1_screen/Screen1View.hpp:36:8: error: extra qualification 'Screen1View::' on member 'Rotate' [-fpermissive]
   void Screen1View::Rotate(touchgfx::AnimationTextureMapper &src);
        ^~~~~~~~~~~
In file included from gui/src/screen1_screen/Screen1View.cpp:1:0:
gui/include/gui/screen1_screen/Screen1View.hpp:36:8: error: extra qualification 'Screen1View::' on member 'Rotate' [-fpermissive]
   void Screen1View::Rotate(touchgfx::AnimationTextureMapper &src);
        ^~~~~~~~~~~
simulator/gcc/Makefile:211: recipe for target 'build/MINGW32_NT-6.2/gui/src/screen1_screen/Screen1Presenter.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/screen1_screen/Screen1Presenter.o] Error 1
make[2]: *** Waiting for unfinished jobs....
simulator/gcc/Makefile:211: recipe for target 'build/MINGW32_NT-6.2/gui/src/screen1_screen/Screen1View.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/screen1_screen/Screen1View.o] Error 1
In file included from generated/gui_generated/include/gui_generated/common/FrontendHeapBase.hpp:14:0,
                 from gui/include/gui/common/FrontendHeap.hpp:4,
                 from generated/gui_generated/src/common/FrontendApplicationBase.cpp:6:
gui/include/gui/screen1_screen/Screen1View.hpp:36:8: error: extra qualification 'Screen1View::' on member 'Rotate' [-fpermissive]
   void Screen1View::Rotate(touchgfx::AnimationTextureMapper &src);
        ^~~~~~~~~~~
simulator/gcc/Makefile:211: recipe for target 'build/MINGW32_NT-6.2/generated/gui_generated/src/common/FrontendApplicationBase.o' failed
make[2]: *** [build/MINGW32_NT-6.2/generated/gui_generated/src/common/FrontendApplicationBase.o] Error 1
In file included from generated/gui_generated/include/gui_generated/common/FrontendHeapBase.hpp:14:0,
                 from gui/include/gui/common/FrontendHeap.hpp:4,
                 from touchgfx//framework/include/common/TouchGFXInit.hpp:19,
                 from simulator/main.cpp:3:
gui/include/gui/screen1_screen/Screen1View.hpp:36:8: error: extra qualification 'Screen1View::' on member 'Rotate' [-fpermissive]
   void Screen1View::Rotate(touchgfx::AnimationTextureMapper &src);
        ^~~~~~~~~~~
simulator/gcc/Makefile:211: recipe for target 'build/MINGW32_NT-6.2/simulator/main.o' failed
make[2]: *** [build/MINGW32_NT-6.2/simulator/main.o] Error 1
simulator/gcc/Makefile:173: recipe for target 'generate_assets' failed
make[1]: *** [generate_assets] Error 2
simulator/gcc/Makefile:31: recipe for target 'all' failed
make: *** [all] Error 2
